Adapt project to Java 11